fix: fixed collapse component

--- a/packages/Collapse/collapse.module.pcss
+++ b/packages/Collapse/collapse.module.pcss
@@ -1,7 +1,7 @@
 .collapse {
-  @apply bg-white shadow-md px-4 py-7;
+  @apply bg-white shadow-box px-4 py-7;
   &Heading { @apply flex items-center; }
-  &Title { flex: 2 0 0; @apply text-xl font-bold text-surface-700; }
+  &Title { flex: 2 0 0; @apply text-xl font-bold font-montserrat text-surface-700; }
   &Icon { @apply text-right; }
   &Content { @apply py-2 text-surface-700; }
 }
